Soap Form lists complete

--- a/BA Portal/Views/SOAPForms/Create.cshtml
+++ b/BA Portal/Views/SOAPForms/Create.cshtml
@@ -848,10 +848,6 @@
 
             <div class="form-group col-sm-8 col-md-8 col-lg-8">
 
-
-
-       
-
                 <select multiple name="PulseRight1">
 
                     <option value=""> </option>
@@ -951,6 +947,73 @@
                 </div>
             </div>
 
+        <div class="form-group col-sm-8 col-md-8 col-lg-8">
+
+            <select multiple name="AssessmentandDiagnosis1">
+
+                <option value=""> </option>
+                <option value="Bladder Damp Heat">Bladder Damp Heat	</option>
+                <option value="Blood Stagnation">Blood Stagnation</option>
+                <option value="Heart Blood Deficiency">Heart Blood Deficiency</option>
+                <option value="Heart Blood Stagnation">Heart Blood Stagnation</option>
+                <option value="Heart Fire">Heart Fire</option>
+                <option value="Heart Qi Deficiency">Heart Qi Deficiency</option>
+                <option value="Heart Yang Collapse">Heart Yang Collapse	</option>
+                <option value="Heart Yang Deficiency">Heart Yang Deficiency</option>
+                <option value="Heart Yin Deficiency">Heart Yin Deficiency</option>
+                <option value="Heat in the Blood">Heat in the Blood</option>
+                <option value="Kidney Jing Deficiency">Kidney Jing Deficiency</option>
+                <option value="Kidney Qi Deficiency">Kidney Qi Deficiency</option>
+                <option value="Kidney Yang Deficiency">Kidney Yang Deficiency</option>
+                <option value="Kidney Yin Deficiency">Kidney Yin Deficiency</option>
+                <option value="Large Intestine Blood Stagnation">Large Intestine Blood Stagnation</option>
+                <option value="Large Intestine Cold	">Large Intestine Cold	</option>
+                <option value="Large Intestine Damp Heat from LI">Large Intestine Damp Heat from LI</option>
+                <option value="Large Intestine Dryness">Large Intestine Dryness</option>
+                <option value="Liver and Gallbladder Damp Heat">Liver and Gallbladder Damp Heat</option>
+                <option value="Liver Attacking the Spleen">Liver Attacking the Spleen</option>
+                <option value="Liver Blood Deficiency">Liver Blood Deficiency</option>
+                <option value="Liver Blood Stagnation">Liver Blood Stagnation</option>
+                <option value="Liver Cold Stagnation Stagnation">Liver Cold Stagnation Stagnation</option>
+                <option value="Liver Fire">Liver Fire</option>
+                <option value="Liver Qi Stagnation">Liver Qi Stagnation</option>
+                <option value="Liver Wind">Liver Wind</option>
+                <option value="Liver Yang Rising">Liver Yang Rising</option>
+                <option value="Liver Yin Deficiency	">Liver Yin Deficiency	</option>
+                <option value="Lung Dampness - Phlegm Cold">Lung Dampness - Phlegm Cold</option>
+                <option value="Lung Dampness - Phlegm Heat">Lung Dampness - Phlegm Heat	</option>
+                <option value="Lung Dryness">Lung Dryness	</option>
+                <option value="Lung Qi Deficiency">Lung Qi Deficiency</option>
+                <option value="Lung Rebellious Qi">Lung Rebellious Qi	</option>
+                <option value="Lung Wind Invasion - Wind Cold">Lung Wind Invasion - Wind Cold</option>
+                <option value="Lung Wind Invasion - Wind Heat">Lung Wind Invasion - Wind Heat</option>
+                <option value="Lung Yin Deficiency">Lung Yin Deficiency</option>
+                <option value="Phlegm Fire">Phlegm Fire</option>
+                <option value="Phlegm Misting the Heart">Phlegm Misting the Heart</option>
+                <option value="Phlegm Stagnation">Phlegm Stagnation</option>
+                <option value="Shen Disturbance">Shen Disturbance</option>
+                <option value="Spleen and Stomach Damp Heat">Spleen and Stomach Damp Heat</option>
+                <option value="Spleen Blood Deficiency">Spleen Blood Deficiency</option>
+                <option value="Spleen Invasion - Cold Damp">Spleen Invasion - Cold Damp</option>
+                <option value="Spleen Not Controlling the Blood">Spleen Not Controlling the Blood</option>
+                <option value="Spleen Qi Deficiency">Spleen Qi Deficiency</option>
+                <option value="Spleen Qi Sinking">Spleen Qi Sinking</option>
+                <option value="Spleen Yang Deficiency">Spleen Yang Deficiency</option>
+                <option value="Stomach Blood Stagnation">Stomach Blood Stagnation</option>
+                <option value="Stomach Cold">Stomach Cold</option>
+                <option value="Stomach Dampness">Stomach Dampness</option>
+                <option value="Stomach Fire">Stomach Fire</option>
+                <option value="Stomach Food Stagnation">Stomach Food Stagnation</option>
+                <option value="Stomach Qi Deficiency">Stomach Qi Deficiency</option>
+                <option value="Stomach Rebellious Qi">Stomach Rebellious Qi</option>
+                <option value="Stomach Yin Deficiency">Stomach Yin Deficiency</option>
+                <option value="Summer Heat">Summer Heat</option>
+      
+
+            </select>
+
+        </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.TreatmentPrinciples, "Treatment Principles", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -960,6 +1023,75 @@
             </div>
         </div>
 
+        <div class="form-group col-sm-8 col-md-8 col-lg-8">
+
+            <select multiple name="TreatmentPrinciples1">
+
+                <option value=""> </option>
+                <option value="Expel UB Dampness / Clear Heat">Expel UB Dampness / Clear Heat</option>
+                <option value="Remove Blood stasis">Remove Blood stasis</option>
+                <option value="Tonify HT Blood">Tonify HT Blood</option>
+                <option value="Remove HT Blood stasis">Remove HT Blood stasis</option>
+                <option value="Clear HT Fire">Clear HT Fire</option>
+                <option value="Tonify HT Qi">Tonify HT Qi</option>
+                <option value="Revive HT Yang">Revive HT Yang</option>
+                <option value="Tonify HT Yang">Tonify HT Yang</option>
+                <option value="Tonify HT Yin">Tonify HT Yin</option>
+                <option value="Clear Heat in the Blood">Clear Heat in the Blood</option>
+                <option value="Tonify KD Jing">Tonify KD Jing</option>
+                <option value="Tonify KD Qi">Tonify KD Qi</option>
+                <option value="Tonify KD Yang">Tonify KD Yang</option>
+                <option value="Tonify KD Yin">Tonify KD Yin</option>
+                <option value="Remove Blood Stasis from LI">Remove Blood Stasis from LI</option>
+                <option value="Warm up LI">Warm up LI</option>
+                <option value="Expel Dampness and Clear Heat from LI">Expel Dampness and Clear Heat from LI</option>
+                <option value="Moisturize LI">Moisturize LI </option>
+                <option value="Clear Damp Heat from LR & GB">Clear Damp Heat from LR & GB</option>
+                <option value="Harmonize LV & SP">Harmonize LV & SP</option>
+                <option value="Tonify LV Blood">Tonify LV Blood</option>
+                <option value="Remove Blood Stasis from LV">Remove Blood Stasis from LV</option>
+                <option value="Warms up LV to remove Stagnation">Warms up LV to remove Stagnation</option>
+                <option value="Clear LV Fire">Clear LV Fire</option>
+                <option value="Sooth LV Qi">Sooth LV Qi</option>
+                <option value="Expel LV Wind">Expel LV Wind</option>
+                <option value="Subdue LV Yang">Subdue LV Yang </option>
+                <option value="Tonify LV Yin">Tonify LV Yin</option>
+                <option value="Expel LU Dampness – Warm up LU">Expel LU Dampness – Warm up LU</option>
+                <option value="Expel LU Dampness – Clear Heat in LU">Expel LU Dampness – Clear Heat in LU</option>
+                <option value="Moisten LU">Moisten LU</option>
+                <option value="Tonify LU Qi">Tonify LU Qi</option>
+                <option value="Sooth LU Qi">Sooth LU Qi</option>
+                <option value="Expel Wind – Warm up LU">Expel Wind – Warm up LU</option>
+                <option value="Expel Wind – Clear Heat in LU">Expel Wind – Clear Heat in LU</option>
+                <option value="Tonify LU Yin">Tonify LU Yin</option>
+                <option value="Clear Phlegm & Fire">Clear Phlegm & Fire</option>
+                <option value="Clear Phlegm">Clear Phlegm</option>
+                <option value="Clear Phlegm, Remove Stagnation">Clear Phlegm, Remove Stagnation</option>
+                <option value="Calm Shen">Calm Shen</option>
+                <option value="Expel Damp Heat from SP & ST">Expel Damp Heat from SP & ST</option>
+                <option value="Tonify SP Blood">Tonify SP Blood</option>
+                <option value="Expel damp & warm up spleen">Expel damp & warm up spleen</option>
+                <option value="Tonify SP">Tonify SP</option>
+                <option value="Tonify SP Qi">Tonify SP Qi</option>
+                <option value="Tonify & Raise SP Qi">Tonify & Raise SP Qi</option>
+                <option value="Tonify SP Yang">Tonify SP Yang</option>
+                <option value="Remove blood stagnation">Remove blood stagnation</option>
+
+                <option value="Warm up ST">Warm up ST</option>
+                <option value="Expel ST Dampness">Expel ST Dampness</option>
+                <option value="Clear ST Fire">Clear ST Fire</option>
+                <option value="Remove Food Stagnation">Remove Food Stagnation </option>
+                <option value="Tonify ST Qi">Tonify ST Qi</option>
+                <option value="Sooth ST Qi">Sooth ST Qi</option>
+                <option value="Tonify ST Yin">Tonify ST Yin</option>
+                <option value="Clear Summer Heat">Clear Summer Heat</option>
+
+
+
+            </select>
+
+        </div>
+
             <div class="form-group">
                 @Html.LabelFor(model => model.PlanofTreatment, "Plan of treatment", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -967,6 +1099,26 @@
                     @Html.ValidationMessageFor(model => model.PlanofTreatment, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+        <div class="form-group col-sm-8 col-md-8 col-lg-8">
+
+            <select multiple name="Planoftreatment1">
+
+                <option value=""> </option>
+                <option value="Acupuncture">Acupuncture</option>
+                <option value="Acupressure / Tui-Na / Body Alignment">Acupressure / Tui-Na / Body Alignment</option>
+                <option value="Cupping Therapy / Gua-Sha Therapy">Cupping Therapy / Gua-Sha Therapy</option>
+                <option value="Electric Stimulation">Electric Stimulation</option>
+                <option value="Heat / TDP Lamp Therapy">Heat / TDP Lamp Therapy</option>
+                <option value="Moxa Therapy">Moxa Therapy</option>
+                <option value="Herbal Formula">Herbal Formula</option>
+                <option value="Aromatherapy">Aromatherapy</option>
+       
+
+
+            </select>
+
+        </div>
 
         @*Tongue Diagnosis*@
         <div class="col-sm-12 col-md-12 col-lg-12">
