--- a/BA Portal/Views/SOAPForms/Create.cshtml
+++ b/BA Portal/Views/SOAPForms/Create.cshtml
@@ -6,6 +6,8 @@
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    Subject subjectpassed = (Subject)TempData["SOAP_Subject"];
 }
 
 <h2>New</h2>
@@ -63,11 +65,11 @@
 
         <div class="col-sm-6 col-md-6 col-lg-6">
  
-
+            <!--Remove the  Value = subject.Name, to make it work with out the correct redirects-->
             <div class="form-group">
                 @Html.LabelFor(model => model.PatientName, "Patient Name", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.PatientName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.PatientName, new { htmlAttributes = new { @Value = subjectpassed.Name + " " + subjectpassed.LastName, @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PatientName, "", new { @class = "text-danger" })
                 </div>
             </div>
