--- a/BA Portal/Views/Account/Login.cshtml
+++ b/BA Portal/Views/Account/Login.cshtml
@@ -65,9 +65,7 @@
 
     </div>
     <div class="col-sm-2 col-md-2 col-lg-2">
-        <font color="lightgreen">
-            Version: 1.17
-        </font>
+        <!--empty-->
     </div>
 
 </div>
