--- a/BA Portal/Views/InsuranceInfoes/AdminEdit.cshtml
+++ b/BA Portal/Views/InsuranceInfoes/AdminEdit.cshtml
@@ -17,7 +17,14 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
-        @Html.HiddenFor(model => model.GroupingID)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.GroupingID, "BA Portal System Grouping ID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GroupingID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.GroupingID, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.PatientName, "Patient Name", htmlAttributes: new { @class = "control-label col-md-2" })
