Modified thanks page
thanks flow

--- a/BA Portal/Views/PDFs/TakeAnotherAction_InsuranceInfo.cshtml
+++ b/BA Portal/Views/PDFs/TakeAnotherAction_InsuranceInfo.cshtml
@@ -9,7 +9,7 @@
     <h2>@Html.ActionLink("Yes", "Create", "InsuranceInfoes", new { id = ViewBag.ID }, null)</h2>
 
 
-    <h2>@Html.ActionLink("No", "Index", "Home", new { id = ViewBag.ID }, null)</h2>
+    <h2>@Html.ActionLink("No", "Index", "Home", new { thanks=1 }, null)</h2>
 
 
 
