--- a/BA Portal/Views/Subjects/Create.cshtml
+++ b/BA Portal/Views/Subjects/Create.cshtml
@@ -517,8 +517,8 @@
         </div>
                     <br />
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-10">
+                <input type="submit" value="Next" class="btn-block btn-default btn-lg" />
             </div>
         </div>
     </div>
