--- a/BA Portal/Views/Shared/_Layout.cshtml
+++ b/BA Portal/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 {
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Clients", "Index", "Subjects")</li>
-      
+                    
                 </ul>
 }
 
@@ -47,7 +47,7 @@
                 <ul class="dropdown-menu">
 
                     <li>@Html.ActionLink("Manage Users", "Index", "Account")</li>
-
+                    <li>@Html.ActionLink("Scheduler", "ActiveClientsScheduler", "Subjects")</li>
 
 
                 </ul>
