--- a/BA Portal/Views/Home/Index.cshtml
+++ b/BA Portal/Views/Home/Index.cshtml
@@ -17,15 +17,27 @@
         <h2>Thanks for signing up!</h2>
     </div>
 }
+@if (ViewBag.Thanks == 2)
+{
+    <div>
+        <h2>Thanks for checking in!</h2>
+    </div>
+}
 
 
 <div align="center">
 
-@if (ViewContext.HttpContext.User.IsInRole("Guest") && ViewBag.Thanks != 1)
+@if (ViewContext.HttpContext.User.IsInRole("Guest") && ViewBag.Thanks != 1 && ViewBag.Thanks != 2)
 {
+
+    <h2>
+        <strong>@Html.ActionLink("Existing Patient", "CheckIn", "Subjects", new { }, new { @class = "btn-info btn-lg" })</strong>
+    </h2>
+    <hr />
     <h2>
         <strong>@Html.ActionLink("New Patient", "Create", "Subjects", new { }, new { @class = "btn-block btn-success btn-lg" })</strong>
     </h2>
+
 }
 
 @if (ViewContext.HttpContext.User.IsInRole("Guest") && ViewBag.Thanks == 1)
@@ -34,6 +46,13 @@
         <strong>@Html.ActionLink("Finish", "Index", "Home", new { }, new { @class = "btn-block btn-success btn-lg" })</strong>
     </h2>
 }
+@if (ViewContext.HttpContext.User.IsInRole("Guest") && ViewBag.Thanks == 2)
+{
+    <h2>
+        <strong>@Html.ActionLink("Finish", "Index", "Home", new { }, new { @class = "btn-block btn-success btn-lg" })</strong>
+    </h2>
+}
+
 
 </div>
 
