--- a/BA Portal/Views/Account/Login.cshtml
+++ b/BA Portal/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
 
 </div>
 <br />
-<div class="panel panel-primary col-custom-6">
+<div class="panel-primary col-lg-6 col-md-8 col-sm-11">
     <div class="panel-heading ">
         <h6>@ViewBag.Title</h6>
         <br />
@@ -24,15 +24,18 @@
                         @Html.AntiForgeryToken()
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+						    <div class="col-md-2">
+					          @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                            </div>
                             <div class="col-md-10">
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="form-group">
-
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+							<div class="col-md-2">
+								@Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                            </div>
                             <div class="col-md-10">
                                 @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
@@ -65,7 +68,7 @@
     </div>
 </div>    
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<br/><br/><br/><br />
 
 
 <div>
@@ -77,8 +80,8 @@
     </div>
 
 </div>
-
-
+<br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br /><br />
 
 
     @{
