--- a/BA Portal/Views/QuickSoapNotes/Create.cshtml
+++ b/BA Portal/Views/QuickSoapNotes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BA_Portal.Models.QuickSoapNote
+﻿@model BA_Portal.Models.QuickSoapNotes
 
 @{
     ViewBag.Title = "Create";
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>QuickSoapNote</h4>
+        <h4>QuickSoapNotes</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -59,6 +59,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateSeen, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateSeen, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DateCompleted, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DateCompleted, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DateCompleted, "", new { @class = "text-danger" })
             </div>
         </div>
 
