--- a/BA Portal/Views/QuickSoapNotes/Delete.cshtml
+++ b/BA Portal/Views/QuickSoapNotes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BA_Portal.Models.QuickSoapNote
+﻿@model BA_Portal.Models.QuickSoapNotes
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>QuickSoapNote</h4>
+    <h4>QuickSoapNotes</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,6 +57,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.DateSeen)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DateCompleted)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DateCompleted)
         </dd>
 
         <dt>
