--- a/BA Portal/Views/QuickSoapNotes/Details.cshtml
+++ b/BA Portal/Views/QuickSoapNotes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BA_Portal.Models.QuickSoapNote
+﻿@model BA_Portal.Models.QuickSoapNotes
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>QuickSoapNote</h4>
+    <h4>QuickSoapNotes</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -56,6 +56,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.DateSeen)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DateCompleted)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DateCompleted)
         </dd>
 
         <dt>
