--- a/BA Portal/Views/QuickSoapNotes/Index.cshtml
+++ b/BA Portal/Views/QuickSoapNotes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BA_Portal.Models.QuickSoapNote>
+﻿@model IEnumerable<BA_Portal.Models.QuickSoapNotes>
 
 @{
     ViewBag.Title = "Index";
@@ -28,6 +28,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DateSeen)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DateCompleted)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CPTcode)
@@ -96,6 +99,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DateSeen)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DateCompleted)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CPTcode)
