--- a/BA Portal/Views/Home/Index.cshtml
+++ b/BA Portal/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<BA_Portal.Models.QuickSoapNotes>
 
 @{
     ViewBag.Title = "Home Page";
@@ -20,10 +20,51 @@
     {
         <h4>
             Quick Notes
-            @Html.TextBox("CloseOpenQuickNotes", null, new { style = "display:none;" })
+            @Html.TextBox("searchString", "+", new { style = "display:none;" })
             <input type="submit" value="+" class="btn btn-primary btn-sm" />
             <input type="submit" value="-" class="btn btn-primary btn-sm" />
         </h4>
+
+        if (ViewBag.Notes == 1)
+        {
+            <div style="max-width: 80%; max-height: 500px; overflow-y: scroll; border: 2px;">
+                <table class="table">
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                Time Seen
+                            </th>
+                            <th>
+                                Return Date
+                            </th>
+                            <th>
+                                Supplements
+                            </th>
+                        </tr>
+
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @item.Name
+                                </td>
+                                <td>
+                                    @item.DateCompleted
+                                </td>
+                                <td>
+                                    @item.ReturnDateRecommended
+                                </td>
+                                <td>
+                                    @item.HerbalSupplement
+
+                                </td>
+                            </tr>
+                        }
+                    </table>
+            </div>
+        }
     } <br />
 }
 
